[package]
name          = "rscenes"
version       = "1.3.0"
authors       = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.info"]
license       = "BSD-3-Clause"
readme        = "README.md"
description   = "Scenes manager for Raylib."
documentation = "https://docs.rs/rscenes/latest/rscenes/"
repository    = "https://github.com/cacilhas/rscenes"
homepage      = "https://crates.io/crates/rscenes"
categories    = ["api-bindings", "game-engines", "graphics"]
keywords      = ["raylib", "scenes"]
edition       = "2021"

[features]
ecs = ["hecs"]

[dependencies]
anyhow = "1.0"
raylib = "3.7"
thiserror = "1.0"

[dependencies.hecs]
version = "0.10"
optional = true
