[package]
name          = "rscenes"
version       = "1.4.1"
authors       = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.info"]
license       = "BSD-3-Clause"
readme        = "README.md"
description   = "Scenes manager for Raylib."
documentation = "https://docs.rs/rscenes/latest/rscenes/"
repository    = "https://github.com/cacilhas/rscenes"
homepage      = "https://crates.io/crates/rscenes"
categories    = ["api-bindings", "game-engines", "graphics"]
keywords      = ["raylib", "scenes"]
edition       = "2021"

[features]
default = ["dep:anyhow"]
ecs = ["hecs"]
eyre = ["dep:eyre"]

[dependencies]
raylib = "3.7"
thiserror = "1.0"

[dependencies.anyhow]
version = "1.0"
optional = true

[dependencies.eyre]
version = "0.6"
optional = true

[dependencies.hecs]
version = "0.10"
optional = true
