[package]
name        = "kodumaro-nonogram"
version     = "3.9.0" # TODO: 4.0.0 when finished
authors     = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.info"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://crates.io/crates/kodumaro-nonogram"
repository  = "https://github.com/cacilhas/nonogram"
keywords    = ["raylib"]
categories  = ["Games"]
description = "A random nonogram game."
edition     = "2021"

[profile.release]
opt-level     = "s"
codegen-units = 1
debug = false
lto   = true
rpath = false
strip = true

[dependencies]
fastrand = "2.0"

[dependencies.rscenes]
path = "../rscenes"
features = ["fake-fs", "storage"]

[[bin]]
name = "nonogram"
path = "src/bin/nonogram.rs"
