[package]
name        = "rscenes-raylib-connector"
version     = "1.0.0"
authors     = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.info>"]
license     = "BSD-3-Clause"
readme      = "../README.md"
homepage    = "https://crates.io/crates/rscenes-raylib-connector"
repository  = "https://github.com/cacilhas/rscenes"
categories  = ["api-bindings", "game-engines", "graphics"]
description = "Raylib connector for Rscenes 2"
edition     = "2021"

[dependencies]
raylib-ffi = "5.0"
