[package]
name          = "rscenes"
version       = "1.9.0"
authors       = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.info"]
license       = "BSD-3-Clause"
readme        = "../README.md"
description   = "Scenes manager for Raylib."
documentation = "https://crates.io/crates/rscenes"
repository    = "https://github.com/cacilhas/rscenes"
homepage      = "https://crates.io/crates/rscenes"
categories    = ["api-bindings", "game-engines", "graphics"]
keywords      = ["raylib", "scenes"]
edition       = "2021"

[dependencies]
resolution = "0.1"

[dependencies.rscenes-macros]
path = "../rscenes-macros"

[dependencies.rscenes-raylib-connector]
path = "../rscenes-raylib-connector"
